--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "bevy_game" # ToDo
 version = "0.1.0"
 publish = false
-authors = ["Niklas Eicker <git@nikl.me>"] # ToDo: you are the author ;)
+authors = ["Matthew Bakhtiari <dev@mtbk.me", "Elijah <bruisedsalads@gmail.com>"]
 edition = "2021"
 
 [profile.dev.package."*"]
@@ -32,10 +32,11 @@ dev = [
 bevy = { version = "0.6", default-features = false }
 bevy_kira_audio = { version = "0.8" }
 bevy_asset_loader = { version = "0.8" }
-rand = "0.8.3"
+bevy_rapier2d = "0.12.0"
+rand = "0.8"
 
 [target.'cfg(target_os = "linux")'.dependencies]
-winit = { version = "0.25", features=["x11"]}
+winit = { version = "0.26", features=["x11", "wayland"]}
 
 [build-dependencies]
 embed-resource = "1.4"
