--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,10 +31,11 @@ dev = [
 
 [dependencies]
 bevy = { version = "0.6", default-features = false }
-bevy_kira_audio = { version = "0.8" }
-bevy_asset_loader = { version = "0.8" }
+bevy_kira_audio = "0.8"
+bevy_asset_loader = "0.8"
 bevy_rapier2d = "0.12.0"
 rand = "0.8"
+bevy-inspector-egui = "0.7.4"
 
 [target.'cfg(target_os = "linux")'.dependencies]
 winit = { version = "0.26", features=["x11", "wayland"]}
