--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "bevy_game" # ToDo
 version = "0.1.0"
 publish = false
-authors = ["Matthew Bakhtiari <dev@mtbk.me", "Elijah <bruisedsalads@gmail.com>"]
+authors = ["Matthew Bakhtiari <dev@mtbk.me", "Elijah <bruisedsalads@gmail.com>", "Tyr <w0lfizaudio@gmail.com>"]
 edition = "2021"
 
 [profile.dev.package."*"]
