--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,7 +23,7 @@ jobs:
           key: ${{ runner.os }}-cargo-build-stable-${{ hashFiles('**/Cargo.toml') }}
       - uses: actions-rs/toolchain@v1
         with:
-          toolchain: stable
+          toolchain: nightly
           override: true
       - name: Install alsa, udev and clang
         run: sudo apt-get update; sudo apt-get install --no-install-recommends libasound2-dev libudev-dev clang
@@ -45,7 +45,7 @@ jobs:
           key: ubuntu-latest-cargo-build-stable-${{ hashFiles('**/Cargo.toml') }}
       - uses: actions-rs/toolchain@v1
         with:
-          toolchain: stable
+          toolchain: nightly
           override: true
       - name: Install alsa, udev and clang
         run: sudo apt-get update; sudo apt-get install --no-install-recommends libasound2-dev libudev-dev clang
@@ -66,7 +66,7 @@ jobs:
           key: ubuntu-latest-cargo-build-stable-${{ hashFiles('**/Cargo.toml') }}
       - uses: actions-rs/toolchain@v1
         with:
-          toolchain: stable
+          toolchain: nightly
           components: rustfmt, clippy
           override: true
       - name: Install alsa, udev and clang
