--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,6 +36,8 @@ bevy_asset_loader = "0.8"
 bevy_rapier2d = "0.12.0"
 rand = "0.8"
 bevy-inspector-egui = "0.7.4"
+serde = "1.0.135"
+ron = "0.7.0"
 
 [target.'cfg(target_os = "linux")'.dependencies]
 winit = { version = "0.26", features=["x11", "wayland"]}
